<resources>
    <string name="app_name">UWE购</string>
    <string name="weixin_api_key">wx69af5446bd66d789</string>
    <string name="um_key">5b962e9af43e482487000023</string>
    <!--商城-->
    <string name="shop_one">美妆护肤</string>
    <string name="shop_two">服装</string>
    <string name="shop_three">鞋靴</string>
    <string name="shop_four">母婴</string>
    <string name="shop_five">家电</string>
    <string name="shop_six">居家百货</string>
    <string name="shop_seven">食品</string>
    <string name="shop_eight">配饰</string>
    <string name="shop_nine">手机数码</string>
    <string name="shop_ten">整车车品</string>

    <!--关于佣金-->
    <string name="about_commision_one">1、批发价：第三方从本店铺进货的价格；</string>
    <string name="about_commision_two">2、买家秀佣金：发布佣金和点赞佣金总和；</string>
    <string name="about_commision_three">3、发布佣金：买家把在本店购买的产品图片或者视频上传到秀场所获得的奖励；</string>
    <string name="about_commision_four">4、点赞佣金：其他人通过在秀场点赞此买家上传的图片或者视频获得的佣金。</string>

    <!--我的-->
    <string name="my_admin">我的管理</string>
    <string name="order_management">订单管理</string>
    <string name="integral_management">积分管理</string>
    <string name="wallet_management">钱包管理</string>
    <string name="store">店铺</string>
    <string name="follow">关注</string>
    <string name="good_friend">好友</string>
    <string name="collection">收藏</string>
    <string name="task">任务</string>
    <string name="my_invitation">我的邀请</string>
    <string name="set_up">设置</string>

    <!--新的包uwe 高德key-->
    <!--<string name="map_key">6e870929c60429f604647bd6d56d1092</string>-->
    <!--旧的包uv购 高德key-->
    <string name="map_key">0d02d485a9ea2feb1f98139d0036478c</string>


    <string name="user_agreement">
        1.本协议的订立 \n
        在本网站（www.uwegou.com）根据《UWE购网站用户注册协议》登记注册，且符合本网站商家入驻标准(详见链接：http://www.uwegou.com） 的用户（以下简称"商 家"），在同意本协议全部条款后，方有资格使用"UWE商家在线入驻系统"（以 下简称"入驻系统"）申请入驻。一经商家点击"同意以上协议，下 一步"按键， 即意味着商家同意与本网站签订本协议并同意受本协议约束。\n
        2.入驻系统使用说明\n
        2.1 商家通过入驻系统提出入驻申请，并按照要求填写商家信息、提供商家资质资料后，由本网站审核并与有合作意向的商家联系协商合作相关事宜，经双方协商一致线下签订书面《开放平台供应商合作运营协议》（以下简称"运营协议"），且商家按 照"运营协议"约定支付相应平台使用费及保证金等必要费用后，商家正式入驻本网站。本网站将为入驻商家开通商家后台系统，商家可通过商家后台系统在本网站运营自己的入驻店铺。\n
        2.2 商家以及本网站通过入驻系统做出的申请、资料提交及确认等各类沟通，仅为双方合作的意向以及本网站对商家资格审核的必备程序，除遵守本协议各项约定外，对双方不产生法律约束力 。双方间最终合作事宜及运营规则均以"运营协议"的约定及商家后台系统公示的各项规则为准。\n
        3.商家权利义务\n
        用户使用"UWE商家在线入驻系统"前请认真阅读并理解本协议内容，本协议内容中以加粗方式显著标识的条款，请用户着重阅读、慎重考虑。\n
    </string>

</resources>
