<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:layout_marginStart="@dimen/dp_12"
    android:layout_marginTop="@dimen/dp_12"
    android:layout_marginEnd="@dimen/dp_12"
    android:background="@drawable/shape_show_friends"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/dp_8"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_8">

        <TextView
            android:id="@+id/tv_one"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_1"
            android:text="@string/shop_one" />

        <TextView
            android:id="@+id/tv_two"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_2"
            android:text="@string/shop_two" />

        <TextView
            android:id="@+id/tv_three"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_3"
            android:text="@string/shop_three" />

        <TextView
            android:id="@+id/tv_four"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_4"
            android:text="@string/shop_four" />

        <TextView
            android:id="@+id/tv_five"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_5"
            android:text="@string/shop_five" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/dp_8"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_8">

        <TextView
            android:id="@+id/tv_six"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_6"
            android:text="@string/shop_six" />

        <TextView
            android:id="@+id/tv_seven"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_7"
            android:text="@string/shop_seven" />

        <TextView
            android:id="@+id/tv_eight"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_8"
            android:text="@string/shop_eight" />

        <TextView
            android:id="@+id/tv_nine"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_9"
            android:text="@string/shop_nine" />

        <TextView
            android:id="@+id/tv_ten"
            style="@style/ShopTenTextViewStyle"
            android:drawableTop="@drawable/sy_icon_ten_10"
            android:text="@string/shop_ten" />

    </LinearLayout>

</LinearLayout>