<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f1f1f1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_head_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20">

            <ImageView
                android:id="@+id/iv_head_portrait"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_toEndOf="@id/iv_head_portrait"
                android:text="UWE购"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nickname"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_7"
                android:layout_toEndOf="@id/iv_head_portrait"
                android:text="店铺名:未开店铺"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_11" />

        </RelativeLayout>

        <!--我的管理-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_6"
            android:background="@color/color_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_my_admin"
                style="@style/MineAdminStyle"
                android:drawableTop="@drawable/mine_icon_wdgl"
                android:text="@string/my_admin" />

            <TextView
                android:id="@+id/tv_order_management"
                style="@style/MineAdminStyle"
                android:drawableTop="@drawable/mine_icon_ddgl"
                android:text="@string/order_management" />

            <TextView
                android:id="@+id/tv_integral_management"
                style="@style/MineAdminStyle"
                android:drawableTop="@drawable/mine_icon_jfgl"
                android:text="@string/integral_management" />

            <TextView
                android:id="@+id/tv_wallet_management"
                style="@style/MineAdminStyle"
                android:drawableTop="@drawable/mine_icon_qbgl"
                android:text="@string/wallet_management" />

        </LinearLayout>

        <!--店铺-->
        <RelativeLayout
            android:id="@+id/rl_store"
            style="@style/MineRlStyle"
            android:layout_marginBottom="@dimen/dp_6">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_dp"
                android:text="@string/store" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <!--关注-->
        <RelativeLayout
            android:id="@+id/rl_follow"
            style="@style/MineRlStyle">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_gz"
                android:text="@string/follow" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <View style="@style/MineViewStyle" />

        <!--好友-->
        <RelativeLayout
            android:id="@+id/rl_good_friend"
            style="@style/MineRlStyle"
            android:visibility="gone">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_hy"
                android:text="@string/good_friend" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <View style="@style/MineViewStyle" />

        <!--收藏-->
        <RelativeLayout
            android:id="@+id/rl_collection"
            style="@style/MineRlStyle">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_shc"
                android:text="@string/collection" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <View style="@style/MineViewStyle" />

        <!--任务-->
        <RelativeLayout
            android:id="@+id/rl_task"
            style="@style/MineRlStyle"
            android:visibility="gone">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_rw"
                android:text="@string/task" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <!--我的邀请-->
        <RelativeLayout
            android:id="@+id/rl_invitation"
            style="@style/MineRlStyle"
            android:layout_marginTop="@dimen/dp_6">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_yq"
                android:text="@string/my_invitation" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

        <!--设置-->
        <RelativeLayout
            android:id="@+id/rl_set_up"
            style="@style/MineRlStyle"
            android:layout_marginTop="@dimen/dp_6">

            <TextView
                style="@style/MineTextViewStyle"
                android:drawableStart="@drawable/mine_icon_sz"
                android:text="@string/set_up" />

            <ImageView style="@style/MineImageViewStyle" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
