<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/dp_55"
    android:layout_marginEnd="@dimen/dp_55"
    android:background="@drawable/shape_show_friends"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_21"
        android:layout_marginBottom="@dimen/dp_15"
        android:gravity="center"
        android:text="关于佣金"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dp_4"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/about_commision_one"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dp_4"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/about_commision_two"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dp_4"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/about_commision_three"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_21"
        android:lineSpacingExtra="@dimen/dp_4"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/about_commision_four"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/app_color"
        android:gravity="center"
        android:text="好，我明白了"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />

</LinearLayout>